# pyright-hand

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PAGINATION.md  README.md  example_config.json  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
src/pyright_mcp/: __init__.py  file_finder.py  main.py  models.py  pyright_runner.py  server.py
tests/: __init__.py  test_file_finder.py  test_pyright_runner.py  test_server.py
